added repo link

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </div>
         <div class="footer">
             <p>Made by Prabhav Negi</p>
-            <div class="github"><img src="gitlogo.svg" alt=""/><a href="www.github.com/prabhavnegi">Github</a></div>
+            <div class="github"><img src="gitlogo.svg" alt=""/><a href="https://github.com/prabhavnegi/gesture-control-demo">Github</a></div>
         </div>
         <script src="script.js" async></script>
     </body>
