--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
         <div class="loader">
             <div>
-                <img src="loader.gif" alt="loading"/>
+                <img src="./static/loader.gif" alt="loading"/>
             </div>
             
         </div>
@@ -101,7 +101,7 @@
         </div>
         <div class="footer">
             <p>Made by Prabhav Negi</p>
-            <div class="github"><img src="gitlogo.svg" alt=""/><a href="https://github.com/prabhavnegi/gesture-control-demo">Github</a></div>
+            <div class="github"><img src="./static/gitlogo.svg" alt=""/><a href="https://github.com/prabhavnegi/gesture-control-demo">Github</a></div>
         </div>
         <script src="script.js" async></script>
     </body>
